--- a/index.html
+++ b/index.html
@@ -4,7 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edward Mavungah - Web Developer & Digital Solutions</title>
-    <meta name="description" content="Edward Mavungah - WordPress Developer specializing in custom web apps, AWS deployment, and digital solutions">
+    <meta name="description" content="
+Edward Mavungah is a Junior Cloud Security Engineer and Web Developer specializing in AWS cloud security, DevSecOps practices, secure cloud projects, and custom web applications. Explore real-world cloud security projects, automation, and infrastructure security.
+">
+
+<meta name="keywords" content="
+Cloud Security Engineer,
+Junior Cloud Security Engineer,
+AWS Cloud Security,
+Cloud Security Projects,
+DevSecOps Engineer,
+AWS Security Engineer,
+Secure Cloud Infrastructure,
+Cloud Penetration Testing,
+IAM Security,
+Cloud Monitoring and Logging,
+Infrastructure as Code Security,
+Web Application Security,
+Linux and Python for Security
+">
+
+<meta name="author" content="Edward Mavungah">
+
+<!-- Open Graph (LinkedIn / Social Sharing) -->
+<meta property="og:title" content="Edward Mavungah | Junior Cloud Security Engineer & AWS Projects">
+<meta property="og:description" content="Junior Cloud Security Engineer focused on AWS, DevSecOps, secure cloud projects, and real-world infrastructure security.">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="Edward Mavungah | Cloud Security Engineer">
+<meta name="twitter:description" content="AWS Cloud Security, DevSecOps, and hands-on cloud security projects.">
     <link rel="icon" type="image/png" href="ED DEV.png">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
